--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="h4 text-center mb-4 title"> Projects</div>
         <div class="card">
           <div class="row">
-            <div class="col-md-7 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/forecast_model.gif&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: scroll">
+            <div class="col-md-7 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/forecast_model.gif&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
               <div class="card-body"></div>
             </div>
 
