--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <link href="./static/css/main.css" rel="stylesheet" type="text/css">
   <script src="./static/js/main.js" defer></script>
-  <link href="./static/css/aos.css" rel="stylesheet">
+  <link href="./static/css/aos.css" rel="stylesheet" type="text/css">
   <script async="" src="./static/js/gtm.js"></script>
   <script src="./static/js/all.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./static/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
