--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <script src="./static/js/main.js" defer></script>
   <link href="./static/css/aos.css" rel="stylesheet" type="text/css">
   <script async="" src="./static/js/gtm.js"></script>
-  <script src="./static/js/all.js" crossorigin="anonymous"></script>
+  <script src="./static/js/all.js" crossorigin="anonymous" defer></script>
+  <script src="./static/js/aos.js" defer></script>
   <link rel="stylesheet" href="./static/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   
 
