--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <script src="//code.jquery.com/jquery-1.11.1.min.js" defer></script>
 
   <link href="./static/css/main.css" rel="stylesheet" type="text/css">
-  <script src="./static/js/main.js" defer></script>
   <link href="./static/css/aos.css" rel="stylesheet" type="text/css">
+  <script src="./static/js/main.js" defer></script>
   <script async="" src="./static/js/gtm.js"></script>
   <script src="./static/js/all.js" crossorigin="anonymous" defer></script>
   <script src="./static/js/aos.js" defer></script>
@@ -154,6 +154,14 @@
     </div>
   </div>
   <!-- End Contact -->
+
+
+  <script src="./static/js/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN " crossorigin="anonymous "></script>
+  <script src="./static/js/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q " crossorigin="anonymous "></script>
+  <script src="./static/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl " crossorigin="anonymous "></script>
+  <script src="./static/js/now-ui-kit.js"></script>
+  <script src="./static/js/aos.js"></script>
+  <script src="./static/js/main.js"></script>
 
 
 </body>
