--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <!-- Project 2 -->
         <div class="card">
           <div class="row">
-            <div class="col-md-7 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/forecast_model.gif&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
+            <div class="col-md-7 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/email_model.gif&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
               <div class="card-body"></div>
             </div>
 
@@ -112,7 +112,7 @@
               <div class="card-body">
 
                 <div class="h5">
-                  <a href="https://github.com/kevogil" style="font-weight: 600">Consolidate multiple files dynamically</a>
+                  <a href="https://github.com/kevogil" style="font-weight: 600">Send emails with customized parameters and attachments</a>
                 </div>
 
                 <div class="card-text">
