--- a/index.html
+++ b/index.html
@@ -128,6 +128,33 @@
           </div>
         </div>
 
+        <!-- Project 3 -->
+        <div class="card">
+          <div class="row">
+            <div class="col-md-7 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/database_model.gif&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
+              <div class="card-body"></div>
+            </div>
+
+            <div class="col-md-5 aos-init aos-animate" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+              <div class="card-body">
+
+                <div class="h5">
+                  <a href="https://github.com/kevogil" style="font-weight: 600">Export Excel to Access and Power Query back to Excel</a>
+                </div>
+
+                <div class="card-text">
+                  <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
+                  <p><strong> Tools used</strong> &nbsp; : &nbsp; Python, Sklearn, Matplotlib, Neural Networks, Keras, Google Colab</p>
+                  <p><strong> Category</strong> &nbsp;: &nbsp; Data Science, Machine Learning, Deep Learning, Optimization</p>
+                  <p><strong> Year</strong> &nbsp; &nbsp; : &nbsp; Nov 2021</p>
+                </div>
+
+              </div>
+            </div>
+
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
