--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <meta name="description" content="This is my custom portfolio.">
    
 
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js" defer></script>
-  <script src="//code.jquery.com/jquery-1.11.1.min.js" defer></script>
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
   <link href="./static/css/main.css" rel="stylesheet" type="text/css">
   <link href="./static/css/aos.css" rel="stylesheet" type="text/css">
-  <script src="./static/js/main.js" defer></script>
+  <script src="./static/js/main.js"></script>
   <script async="" src="./static/js/gtm.js"></script>
-  <script src="./static/js/all.js" crossorigin="anonymous" defer></script>
+  <script src="./static/js/all.js" crossorigin="anonymous"></script>
   <script src="./static/js/aos.js" defer></script>
   <link rel="stylesheet" href="./static/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   
