--- a/index.html
+++ b/index.html
@@ -8,17 +8,24 @@
   <meta name="description" content="This is my custom portfolio.">
    
 
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
-  <link href="./static/css/main.css" rel="stylesheet" type="text/css">
+
+
+
   <link href="./static/css/aos.css" rel="stylesheet" type="text/css">
   <script src="./static/js/main.js"></script>
   <script async="" src="./static/js/gtm.js"></script>
   <script src="./static/js/all.js" crossorigin="anonymous"></script>
   <script src="./static/js/aos.js" defer></script>
-  <link rel="stylesheet" href="./static/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
   
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/main.css">
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
 
   <!-- Favicon -->
   <link rel="icon" href="https://lh3.googleusercontent.com/proxy/_zbyiRrVFch2NIYMZ1GKK7NcQFOzKtpuudWfkcTtwklmE78dBcN2CMmW1XUCfpnaF1BPs6FW8vogssChPkgz7yuZGWaLHMmqNnRM7mHtNwNnjURKb9MZK8W9NKbupyNmNcRwUyoK">
