--- a/index.html
+++ b/index.html
@@ -7,28 +7,23 @@
   <title>Kevin Gil's Portfolio</title>
   <meta name="description" content="This is my custom portfolio.">
    
-
-
-
-
-
-  <link href="./static/css/aos.css" rel="stylesheet" type="text/css">
-  <script src="./static/js/main.js"></script>
-  <script async="" src="./static/js/gtm.js"></script>
-  <script src="./static/js/all.js" crossorigin="anonymous"></script>
-  <script src="./static/js/aos.js" defer></script>
-
-  
-
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="/static/css/main.css">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
+  <link href="./static/css/aos.css" rel="stylesheet" type="text/css">
+  <script src="./static/js/main.js"></script>
+  <script async="" src="./static/js/gtm.js"></script>
+  <script src="./static/js/all.js" crossorigin="anonymous"></script>
+  <script src="./static/js/aos.js" defer></script>
+  <script src="./static/js/site-core.min.js"></script>
+
 
   <!-- Favicon -->
   <link rel="icon" href="https://lh3.googleusercontent.com/proxy/_zbyiRrVFch2NIYMZ1GKK7NcQFOzKtpuudWfkcTtwklmE78dBcN2CMmW1XUCfpnaF1BPs6FW8vogssChPkgz7yuZGWaLHMmqNnRM7mHtNwNnjURKb9MZK8W9NKbupyNmNcRwUyoK">
+
 
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
