--- a/index.html
+++ b/index.html
@@ -190,6 +190,9 @@
   </div>
   <!-- End Contact -->
 
+  <!-- Footer -->
+  <div class="footer module me-darkgrey me-text-center me-white-text" id="footer">© <span id="year">2021</span>. All Rights Reserved.</div>
+
 </body>
 
 </html>
