--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </head>
 
 
-<body id="top" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
+<body id="top" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0" class="me-noselect">
   
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MFZ788R"
