--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
   <!-- Contact -->
   <div class="contact module me-turquoise" id="contact">
     <div class="speechBubble me-white-bg" id="speechBubble" style="transform: scale(0.75);">
-      <span><strong>Let's make</strong><br> something <br> awesome <br><b> together </b>.</span>
+      <span>Let's make<br> something <br> <strong>awesome</strong> <br><b> together </b>.</span>
     </div>
     <p class="name-and-mail me-white-text me-text-center"><span><b>Kevin</b> Gil</span><br>Connect with me</p>
     <div class="social-icons me-text-center">
