--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 
   <!-- About Me -->
-  <div class="module me-yellow-bg" id="about-me">
+  <div class="me-yellow-bg" id="about-me">
     <h2>ABOUT ME</h2>
     <p>About me section</p>
   </div>
