--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </head>
 
 
-<body id="top" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0" class="me-noselect">
+<body id="top" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
   
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MFZ788R"
@@ -64,7 +64,7 @@
 
 
   <!-- About Me -->
-  <div class="about-module me-accelerate module me-white-bg" id="about-me">
+  <div class="about-module me-accelerate module me-yellow-bg" id="about-me">
     <h2>ABOUT ME</h2>
     <p>About me section</p>
   </div>
