--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 
   <!-- About Me -->
   <div class="about-module me-accelerate module me-yellow-bg" id="about-me">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
     <h2>ABOUT ME</h2>
     <p>About me section</p>
   </div>
@@ -74,6 +75,7 @@
   <!-- Projects -->
   <div class="section" id="experience">
     <div class="container cc-experience">
+      <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
       <div class="h4 text-center mb-4 title"> Projects</div>
 
         <!-- Project 1 -->
