--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <!-- About Me -->
   <div class="about-module me-accelerate module me-yellow-bg" id="about-me">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
-    <h2>about me</h2>
+    <h2>ABOUT ME</h2>
     <p class="subtitle">About me section</p>
   </div>
   <!-- End About Me -->
