--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
   <div class="section" id="experience">
     <div class="container cc-experience">
       <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
-      
+
       <div class="h4 text-center mb-4 title">
-        <h2>Projects</h2>
+        <h2>PROJECTS</h2>
       </div>
 
         <!-- Project 1 -->
