--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 
   <!-- Projects -->
-  <div class="section me-lightgrey" id="experience">
+  <div class="section" id="experience">
     <div class="container cc-experience">
       <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
 
@@ -82,7 +82,7 @@
       </div>
 
         <!-- Project 1 -->
-        <div class="card">
+        <div class="card me-lightgrey">
           <div class="row">
             <div class="col-md-7 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/forecast_model.gif&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
               <div class="card-body"></div>
@@ -111,7 +111,7 @@
         <br><br>
 
         <!-- Project 2 -->
-        <div class="card">
+        <div class="card me-lightgrey">
           <div class="row">
             <div class="col-md-7 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/email_model.gif&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
               <div class="card-body"></div>
@@ -140,7 +140,7 @@
         <br><br>
 
         <!-- Project 3 -->
-        <div class="card">
+        <div class="card me-lightgrey">
           <div class="row">
             <div class="col-md-7 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/database_model.gif&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
               <div class="card-body"></div>
