--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 
   <!-- About Me -->
-  <div class="about-module me-accelerate module me-yellow-bg" id="about-me">
+  <div class="module me-yellow-bg" id="about-me">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
     <h2 class="me-white-text">ABOUT ME</h2>
     <p class="subtitle me-white-text">About me section</p>
