--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@
   <!-- End About Me -->
 
 
+    <!-- Skills -->
+    <div class="about-me module me-orange-bg" id="about-me">
+      <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
+      <h2 class="me-white-text">SKILLS</h2>
+      <p class="subtitle me-white-text">My skillsets section</p>
+    </div>
+    <!-- End Skills -->
+
+
   <!-- Projects -->
   <div class="section" id="experience">
     <div class="container cc-experience">
