--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 
     <!-- Skills -->
-    <div class="about-me module me-orange-bg" id="about-me">
+    <div class="about-me module me-lightgrey" id="about-me">
       <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
       <h2 class="me-white-text">SKILLS</h2>
       <p class="subtitle me-white-text">My skillsets section</p>
