--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <div class="about-me module me-yellow-bg" id="about-me">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
     <h2 class="me-white-text">ABOUT ME</h2>
-    <p class="subtitle me-white-text">I have</p>
+    <p class="subtitle me-white-text">I currently work as a Financial Analyst with over 5 years of corporate experience in Finance / Accounting.</p>
   </div>
   <!-- End About Me -->
 
