--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
   <!-- About Me -->
   <div class="about-me module me-yellow-bg" id="about-me">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
-    <h2 class="me-white-text">A B O U T    M E</h2>
+    <h2 class="me-white-text">ABOUT ME</h2>
     <p class="subtitle me-white-text">I am an Analyst with over 5 years of corporate experience in Finance & Accounting.</p>
+    <p class="subtitle me-white-text">My love for data and programming</p>
   </div>
   <!-- End About Me -->
 
