--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
     <h2 class="me-white-text">ABOUT ME</h2>
     <p class="subtitle me-white-text">I am an Analyst with over 5 years of corporate experience in Finance & Accounting.</p>
-    <p class="subtitle me-white-text">My love for data and programming</p>
+    <p class="subtitle me-white-text">My love for programming kicked off at the age of 13 when I learned I could create my own games on my TI-83 graphing calulator.</p>
+    <p class="subtitle me-white-text">Since then</p>
   </div>
   <!-- End About Me -->
 
