--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <h2 class="me-white-text">ABOUT ME</h2>
     <p class="subtitle me-white-text">I am an Analyst with over 10 years of government and corporate experience in Finance.</p>
     <p class="subtitle me-white-text">My love for data and programming kicked off at the age of 13 when I learned I could write programs into my TI-83 graphing calulator.</p>
-    <p class="subtitle me-white-text">Since then</p>
+    <p class="subtitle me-white-text">I am driven by curiosity</p>
   </div>
   <!-- End About Me -->
 
