--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
   <div class="about-me module me-yellow-bg" id="about-me">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
     <h2 class="me-white-text">ABOUT ME</h2>
-    <p class="subtitle me-white-text">I am an Analyst with over 10 years of government and corporate experience in Finance.</p>
-    <p class="subtitle me-white-text">My love for data and programming kicked off at the age of 13 when I learned I could write programs into my TI-83 graphing calulator.</p>
+    <p class="subtitle me-white-text">I am a Senior Financial Analyst at First American with five years of experience helping organizations solve problems and put their data to use.</p>
+    <p class="subtitle me-white-text">I enjoy mining and modeling data for insights with VBA, SQL, and Python. I have extensive experience</p>
     <p class="subtitle me-white-text">I am driven by curiosity</p>
   </div>
   <!-- End About Me -->
