--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
     <h2 class="me-white-text">ABOUT ME</h2>
     <p class="subtitle me-white-text">I am a Senior Financial Analyst at First American with five years of experience helping organizations solve problems and put their data to use.</p>
-    <p class="subtitle me-white-text">I enjoy mining and modeling data for insights with VBA, SQL, and Python. I have extensive experience</p>
-    <p class="subtitle me-white-text">I am driven by curiosity</p>
+    <p class="subtitle me-white-text">I enjoy mining and modeling data for insights with VBA, Power Query M, SQL, and Python. I have extensive experience in building financial models and automating processes for organizations across media, retail, and licensing industries.</p>
+    <p class="subtitle me-white-text">Driven and always curious, I love learning new skillsets to add to my toolkit in the never-ending pursuit for growth.</p>
   </div>
   <!-- End About Me -->
 
