--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
     <h2 class="me-white-text">ABOUT ME</h2>
     <p class="subtitle me-white-text">I am a Senior Financial Analyst with five years of experience helping organizations solve problems and put their data to use. I enjoy mining and modeling data for insights with VBA, Power Query M, and Python.</p>
-    <p class="subtitle me-white-text">I have extensive experience in building financial models and automating processes for organizations across media, retail, and licensing industries.</p>
-    <p class="subtitle me-white-text">Driven and always curious, I love learning and tinkering around with new libraries and toolsets.</p>
+    <p class="subtitle me-white-text">I have extensive experience in building financial models and automating processes for organizations across media, retail, and licensing industries. Driven and always curious, I love learning and tinkering around with new libraries and toolsets.</p>
   </div>
   <!-- End About Me -->
 
