--- a/index.html
+++ b/index.html
@@ -73,13 +73,22 @@
   <!-- End About Me -->
 
 
-    <!-- Education & Skills -->
+    <!-- Skills -->
     <div class="education-skills module me-lightgrey" id="education-skills">
       <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
-      <h2>EDUCATION & SKILLS</h2>
-      <p class="subtitle">My skillsets section</p>
+      <h2>SKILLS</h2>
+      <p class="subtitle">List of skillsets</p>
     </div>
-    <!-- End Education & Skills -->
+    <!-- End Skills -->
+
+
+    <!-- Education -->
+    <div class="education-skills module me-lightgrey" id="education-skills">
+      <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
+      <h2>EDUCATION</h2>
+      <p class="subtitle">List of education</p>
+    </div>
+    <!-- End Education -->
 
 
   <!-- Projects -->
