--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 
     <!-- Skills -->
-    <div class="education-skills module me-lightgrey" id="education-skills">
+    <div class="skills-education module me-lightgrey" id="skills-education">
       <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
       <h2>SKILLS</h2>
       <p class="subtitle">List of skillsets</p>
@@ -83,7 +83,7 @@
 
 
     <!-- Education -->
-    <div class="education-skills module me-lightgrey" id="education-skills">
+    <div class="skills-education module me-lightgrey" id="skills-education">
       <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
       <h2>EDUCATION</h2>
       <p class="subtitle">List of education</p>
