--- a/index.html
+++ b/index.html
@@ -73,24 +73,58 @@
   <!-- End About Me -->
 
 
-    <!-- Skills -->
-    <div class="skills module me-lightgrey" id="skills">
+  <!-- Skills -->
+  <div class="skills module me-lightgrey" id="skills">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
+    <h2>SKILLS</h2>
+    <p class="subtitle">List of skillsets</p>
+  </div>
+  <!-- End Skills -->
+
+
+  <!-- Education -->
+  <div class="education module me-lightgrey" id="education">
+    <div class="container cc-experience">
       <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
-      <h2>SKILLS</h2>
-      <p class="subtitle">List of skillsets</p>
-    </div>
-    <!-- End Skills -->
-
-
-    <!-- Education -->
-    <div class="education module me-lightgrey" id="education">
-      <div class="container cc-experience">
-        <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
-        <h2>EDUCATION</h2>
-        <p class="subtitle">List of education</p>
+      
+      <div class="h4 text-center mb-4 title">
+        <h2>PROJECTS</h2>
       </div>
+
+        <!-- Education 1 -->
+        <div class="card">
+          <div class="row">
+            <div class="col-md-7 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/forecast_model.gif&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
+              <div class="card-body"></div>
+            </div>
+
+            <div class="col-md-5 aos-init aos-animate" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+              <div class="card-body">
+
+                <div class="h5">
+                  <a href="https://github.com/kevogil" style="font-weight: 600">Consolidate multiple files dynamically</a>
+                </div>
+
+                <div class="card-text">
+                  <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
+                  <p><strong> Tools used</strong> &nbsp; : &nbsp; Python, Sklearn, Matplotlib, Neural Networks, Keras, Google Colab</p>
+                  <p><strong> Category</strong> &nbsp;: &nbsp; Data Science, Machine Learning, Deep Learning, Optimization</p>
+                  <p><strong> Year</strong> &nbsp; &nbsp; : &nbsp; Nov 2021</p>
+                </div>
+
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+        <br><br>
+
+        <!-- Education 2 -->
+
     </div>
-    <!-- End Education -->
+  </div>
+  <!-- End Education -->
 
 
   <!-- Projects -->
