--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
       
       <div class="h4 text-center mb-4 title">
-        <h2>PROJECTS</h2>
+        <h2>EDUCATION</h2>
       </div>
 
         <!-- Education 1 -->
@@ -102,7 +102,7 @@
               <div class="card-body">
 
                 <div class="h5">
-                  <a href="https://github.com/kevogil" style="font-weight: 600">Consolidate multiple files dynamically</a>
+                  <a href="https://github.com/kevogil" style="font-weight: 600">Data Analytics Boot Camp</a>
                 </div>
 
                 <div class="card-text">
