--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 
   <!-- Projects -->
-  <div class="section" id="experience">
+  <div class="experience" id="experience">
     <div class="container cc-experience">
       <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
 
