--- a/index.html
+++ b/index.html
@@ -98,29 +98,23 @@
         <!-- Education 1 -->
         <div class="card">
           <div class="row">
-            <div class="col-md-7 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/forecast_model.gif&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
-              <div class="card-body"></div>
-            </div>
-
-            <div class="col-md-5 aos-init aos-animate" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-              <div class="card-body">
-
-                <div class="h5">
-                  <a href="https://github.com/kevogil" style="font-weight: 600">Data Analytics Boot Camp</a>
-                </div>
-
-                <div class="card-text">
-                  <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
-                  <p><strong> Tools used</strong> &nbsp; : &nbsp; Python, Sklearn, Matplotlib, Neural Networks, Keras, Google Colab</p>
-                  <p><strong> Category</strong> &nbsp;: &nbsp; Data Science, Machine Learning, Deep Learning, Optimization</p>
-                  <p><strong> Year</strong> &nbsp; &nbsp; : &nbsp; Nov 2021</p>
-                </div>
-
+              <div class="col-md-3 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                  <div class="card-body cc-education-header">
+                      <p>2021</p>
+                      <div class="h5">Certification</div>
+                  </div>
               </div>
-            </div>
-
+              <div class="col-md-9 aos-init aos-animate" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                  <div class="card-body">
+                      <div class="h5">Data Science and Analytics Boot Camp</div>
+                      <h6 style="color: darkgrey;">Georgia Institute Of Technology | Atlanta, GA, US</h6>
+                      <p> 24-week intensive program focused on technical programming skills in Python, R, JavaScript, Web Scraping, API Interactions, SQL/NoSQL Databases, ETL, Tableau, Front End Web Visualization, Fundamental Statistics,
+                          Big Data, Machine Learning and Deep Learning.
+                      </p>
+                  </div>
+              </div>
           </div>
-        </div>
+      </div>
 
         <br><br>
 
