--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
         <div class="row">
           <div class="col-md-3 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
             <div class="card-body cc-education-header">
-              <p>2021</p>
-              <div class="h5">Certification</div>
+              <p>2012</p>
+              <div class="h5">Bachelor's Degree</div>
             </div>
           </div>
           <div class="col-md-9 aos-init aos-animate" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
             <div class="card-body">
-              <div class="h5">Data Science and Analytics Boot Camp</div>
-              <h6 style="color: darkgrey;">USC Viterbi School of Engineering | Los Angeles, CA</h6>
+              <div class="h5">Bachelor of Business Administration (BBA) - Accounting</div>
+              <h6 style="color: darkgrey;">University of California, Riverside | Riverside, CA</h6>
               <p> 24-week intensive program focused on technical programming skills in Python, R, JavaScript, Web Scraping, API Interactions, SQL/NoSQL Databases, ETL, Tableau, Front End Web Visualization, Fundamental Statistics,
                   Big Data, Machine Learning and Deep Learning.
               </p>
