--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
 
 
   <!-- Skills -->
-  <div class="skills module me-lightgrey" id="skills">
+  <div class="skills me-accelerate module me-lightgrey" id="skills">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
+    <div class="compass" id="compass-decorator" style="transform: rotate(0deg);"></div>
     <h2>SKILLS</h2>
     <div class="me-text-center">
       <div class="overflowbox me-inline-block">
