--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 
   <!-- About Me -->
-  <div class="about-me module me-yellow-bg" id="about-me">
+  <div class="about-me me-yellow-bg" id="about-me">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
     <h2 class="me-white-text">ABOUT ME</h2>
     <p class="subtitle me-white-text">I am a Senior Financial Analyst with five years of experience helping organizations solve problems and put their data to use. I enjoy mining and modeling data for insights with VBA, Power Query M, and Python.</p>
