--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 
   <!-- Education -->
-  <div class="education module me-lightgrey" id="education">
+  <div class="education me-lightgrey" id="education">
     <div class="container cc-experience">
       <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
       
