--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 
   <!-- Education -->
-  <div class="education me-orange-bg" id="education">
+  <div class="education me-lightgrey" id="education">
     <div class="container cc-experience">
       <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
       
