--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
     <div class="compass" id="compass-decorator" style="transform: rotate(0deg);"></div>
     <h2>SKILLS</h2>
+
     <div class="container">
       <div class="card aos-init aos-animate" data-aos="fade-up" data-aos-offset="10">
         <div class="row">
@@ -98,7 +99,6 @@
   <div class="education me-lightgrey" id="education">
     <div class="container cc-experience">
       <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
-      
       <div class="h4 text-center mb-4 title">
         <h2>EDUCATION</h2>
       </div>
@@ -153,7 +153,7 @@
 
 
   <!-- Projects -->
-  <div class="experience" id="experience">
+  <div class="projects" id="projects">
     <div class="container cc-experience">
       <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
 
