--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   <!-- Education -->
   <div class="education me-lightgrey" id="education">
-    <div class="container cc-experience">
+    <div class="container cc-education">
       <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
       <div class="h4 text-center mb-4 title">
         <h2>EDUCATION</h2>
