--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <!-- Education 1 -->
       <div class="card">
         <div class="row">
-          <div class="col-md-3 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="col-md-3 me-orange-bg aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
             <div class="card-body cc-education-header">
               <p>2021</p>
               <div class="h5">Certification</div>
@@ -107,7 +107,7 @@
       <!-- Education 2 -->
       <div class="card">
         <div class="row">
-          <div class="col-md-3 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="col-md-3 me-orange-bg aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
             <div class="card-body cc-education-header">
               <p>2012</p>
               <div class="h5">Bachelor's Degree</div>
