--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
-  <link href="./static/css/aos.css" rel="stylesheet" type="text/css">
+  <link href="./static/css/aos.css" rel="stylesheet">
   <script async="" src="./static/js/gtm.js"></script>
   <script src="./static/js/main.js"></script>
   <script src="./static/js/all.js" crossorigin="anonymous"></script>
