--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
-  <link href="./static/css/aos.css" rel="stylesheet">
-  <script async="" src="./static/js/gtm.js"></script>
+  <!-- <link href="./static/css/aos.css" rel="stylesheet"> -->
+  <!-- <script async="" src="./static/js/gtm.js"></script>
   <script src="./static/js/main.js"></script>
   <script src="./static/js/all.js" crossorigin="anonymous"></script>
   <script src="./static/js/aos.js"></script>
-  <script src="./static/js/site-core.min.js"></script>
+  <script src="./static/js/site-core.min.js"></script> -->
 
 
   <!-- Favicon -->
@@ -67,7 +67,7 @@
   <div class="about-me me-yellow-bg" id="about-me">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
     <h2 class="me-white-text">ABOUT ME</h2>
-    <p class="subtitle me-white-text">I am a Senior Financial Analyst with five years of experience helping organizations solve problems and put their data to use. I enjoy mining and modeling data for insights with VBA, Power Query M, and Python.</p>
+    <p class="subtitle me-white-text">I am a Financial Analyst with five years of experience helping organizations solve problems and put their data to use. I enjoy mining and modeling data for insights with VBA, Power Query M, and Python.</p>
     <p class="subtitle me-white-text">I have extensive experience in building financial models and automating processes for organizations across media, retail, and licensing industries. Driven and always curious, I love learning and tinkering around with new libraries and toolsets.</p>
   </div>
   <!-- End About Me -->
@@ -84,7 +84,7 @@
       <!-- Education 1 -->
       <div class="card">
         <div class="row">
-          <div class="col-md-3 me-orange-bg aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="col-md-3 me-turquoise aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
             <div class="card-body cc-education-header">
               <p>2021</p>
               <div class="h5">Certification</div>
@@ -107,7 +107,7 @@
       <!-- Education 2 -->
       <div class="card">
         <div class="row">
-          <div class="col-md-3 me-orange-bg aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="col-md-3 me-turquoise aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
             <div class="card-body cc-education-header">
               <p>2012</p>
               <div class="h5">Bachelor's Degree</div>
