--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Kevin Gil's Portfolio</title>
   <meta name="description" content="This is my custom portfolio.">
-   
+  
+  <!-- Bootstrap Grid CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="/static/css/main.css">
@@ -14,11 +15,11 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
   <!-- <link href="./static/css/aos.css" rel="stylesheet"> -->
-  <!-- <script async="" src="./static/js/gtm.js"></script>
+  <!-- <script async="" src="./static/js/gtm.js"></script> -->
   <script src="./static/js/main.js"></script>
-  <script src="./static/js/all.js" crossorigin="anonymous"></script>
-  <script src="./static/js/aos.js"></script>
-  <script src="./static/js/site-core.min.js"></script> -->
+  <!-- <script src="./static/js/all.js" crossorigin="anonymous"></script> -->
+  <!-- <script src="./static/js/aos.js"></script> -->
+  <!-- <script src="./static/js/site-core.min.js"></script> --> -->
 
 
   <!-- Favicon -->
