--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <!-- <link href="./static/css/aos.css" rel="stylesheet"> -->
   <!-- <script async="" src="./static/js/gtm.js"></script> -->
-  <script src="./static/js/main.js"></script>
+  <!-- <script src="./static/js/main.js"></script> -->
   <!-- <script src="./static/js/all.js" crossorigin="anonymous"></script> -->
   <!-- <script src="./static/js/aos.js"></script> -->
   <!-- <script src="./static/js/site-core.min.js"></script> --> -->
@@ -277,5 +277,7 @@
   <!-- End Contact -->
 
 </body>
+
+<script src="./static/js/main.js"></script>
 
 </html>
