--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
   
   <!-- Bootstrap Grid CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.1/css/bootstrap-grid.min.css">
+  <!-- AOS CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="/static/css/main.css">
 
   <!-- <link href="./static/css/aos.css" rel="stylesheet"> -->
   <!-- <script async="" src="./static/js/gtm.js"></script> -->
-  <!-- <script src="./static/js/main.js"></script> -->
+  <script src="./static/js/main.js"></script>
   <!-- <script src="./static/js/all.js" crossorigin="anonymous"></script> -->
   <!-- <script src="./static/js/aos.js"></script> -->
   <!-- <script src="./static/js/site-core.min.js"></script> --> -->
