--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <script src="./static/js/main.js"></script>
   <!-- <script src="./static/js/all.js" crossorigin="anonymous"></script> -->
   <!-- <script src="./static/js/aos.js"></script> -->
-  <!-- <script src="./static/js/site-core.min.js"></script> --> -->
+  <!-- <script src="./static/js/site-core.min.js"></script> -->
 
 
   <!-- Favicon -->
