--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <!-- About Me -->
   <div class="about-me me-yellow-bg" id="about-me">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
-    <h2 class="me-white-text">ABOUT ME</h2>
+    <h2 class="me-white-text" data-aos="zoom-in">ABOUT ME</h2>
     <p class="subtitle me-white-text">I am a Financial Analyst with five years of experience helping organizations solve problems and put their data to use. I enjoy mining and modeling data for insights with VBA, Power Query M, and Python.</p>
     <p class="subtitle me-white-text">I have extensive experience in building financial models and automating processes for organizations across media, retail, and licensing industries. Driven and always curious, I love learning and tinkering around with new libraries and toolsets.</p>
   </div>
@@ -81,7 +81,7 @@
     <div class="container cc-education">
       <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
       <div class="h4 text-center mb-4 title">
-        <h2>EDUCATION</h2>
+        <h2 data-aos="zoom-in">EDUCATION</h2>
       </div>
 
       <!-- Education 1 -->
@@ -137,7 +137,7 @@
   <div class="skills me-accelerate me-lightgrey" id="skills">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
     <div class="compass" id="compass-decorator" style="transform: rotate(0deg);"></div>
-    <h2>SKILLS</h2>
+    <h2 data-aos="zoom-in">SKILLS</h2>
 
     <div class="container">
       <div class="card aos-init aos-animate" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">
@@ -161,7 +161,7 @@
       <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
 
       <div class="h4 text-center mb-4 title">
-        <h2>PROJECTS</h2>
+        <h2 data-aos="zoom-in">PROJECTS</h2>
       </div>
 
       <!-- Project 1 -->
@@ -258,7 +258,7 @@
 
   <!-- Contact -->
   <div class="contact module me-turquoise" id="contact">
-    <div class="speechBubble me-white-bg" id="speechBubble" style="transform: scale(0.75);">
+    <div class="speechBubble me-white-bg" id="speechBubble" style="transform: scale(0.75);" data-aos="zoom-in-up">
       <span>Let's make<br> something <br> <strong>awesome</strong> <br> together</span>
     </div>
     <p class="name-and-mail me-white-text me-text-center"><span><b>Kevin</b> Gil</span><br>kevingil23@gmail.com</p>
