--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <!-- About Me -->
   <div class="about-me me-yellow-bg" id="about-me">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
-    <h2 class="me-white-text" data-aos="fade-up">ABOUT ME</h2>
+    <h2 class="me-white-text"">ABOUT ME</h2>
     <p class="subtitle me-white-text">I am a Financial Analyst with five years of experience helping organizations solve problems and put their data to use. I enjoy mining and modeling data for insights with VBA, Power Query M, and Python.</p>
     <p class="subtitle me-white-text">I have extensive experience in building financial models and automating processes for organizations across media, retail, and licensing industries. Driven and always curious, I love learning and tinkering around with new libraries and toolsets.</p>
   </div>
@@ -76,7 +76,7 @@
     <div class="container cc-education">
       <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
       <div class="h4 text-center mb-4 title">
-        <h2 data-aos="fade-up">EDUCATION</h2>
+        <h2>EDUCATION</h2>
       </div>
 
       <!-- Education 1 -->
@@ -132,7 +132,7 @@
   <div class="skills me-accelerate me-lightgrey" id="skills">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
     <div class="compass" id="compass-decorator" style="transform: rotate(0deg);"></div>
-    <h2 data-aos="fade-up">SKILLS</h2>
+    <h2>SKILLS</h2>
 
     <div class="container">
       <div class="card aos-init aos-animate" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">
@@ -156,7 +156,7 @@
       <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
 
       <div class="h4 text-center mb-4 title">
-        <h2 data-aos="fade-up">PROJECTS</h2>
+        <h2">PROJECTS</h2>
       </div>
 
       <!-- Project 1 -->
