--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
   <!-- Skills -->
   <div class="skills me-accelerate me-lightgrey" id="skills">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
-    <div class="compass" id="compass-decorator" style="transform: rotate(0deg);"></div>
-    <h2>SKILLS</h2>
+    <!-- <div class="compass" id="compass-decorator" style="transform: rotate(0deg);"></div> -->
 
     <div class="container">
+      <h2 data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">SKILLS</h2>
       <div class="card aos-init aos-animate" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">
         <div class="row">
           <div class="col-md-6 p-5">
