--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
 
       <div class="h4 text-center mb-4 title">
-        <h2">PROJECTS</h2>
+        <h2>PROJECTS</h2>
       </div>
 
       <!-- Project 1 -->
@@ -253,7 +253,7 @@
 
   <!-- Contact -->
   <div class="contact module me-turquoise" id="contact">
-    <div class="speechBubble me-white-bg" id="speechBubble" data-aos="zoom-in-up" style="transform: scale(0);">
+    <div class="speechBubble me-white-bg" id="speechBubble" data-aos="zoom-in-up" style="transform: scale(0.75);">
       <span>Let's make<br> something <br> <strong>awesome</strong> <br> together</span>
     </div>
     <p class="name-and-mail me-white-text me-text-center"><span><b>Kevin</b> Gil</span><br>kevingil23@gmail.com</p>
