--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
   <!-- Contact -->
   <div class="contact module me-turquoise" id="contact">
-    <div class="speechBubble me-white-bg" id="speechBubble" data-aos="zoom-in-up">
+    <div class="speechBubble me-white-bg" id="speechBubble" style="transform: scale(0.75);">
       <span>Let's make<br> something <br> <strong>awesome</strong> <br> together</span>
     </div>
     <p class="name-and-mail me-white-text me-text-center"><span><b>Kevin</b> Gil</span><br>kevingil23@gmail.com</p>
