--- a/index.html
+++ b/index.html
@@ -187,14 +187,13 @@
             <div class="card-body">
 
               <div class="h5">
-                <a href="https://github.com/kevogil" style="font-weight: 600">Consolidate multiple files dynamically</a>
+                <h4 style="font-weight: 600">Consolidate multiple files dynamically</h4>
               </div>
 
               <div class="card-text">
                 <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
-                <p><strong> Tools used</strong> &nbsp; : &nbsp; Python, Sklearn, Matplotlib, Neural Networks, Keras, Google Colab</p>
-                <p><strong> Category</strong> &nbsp;: &nbsp; Data Science, Machine Learning, Deep Learning, Optimization</p>
-                <p><strong> Year</strong> &nbsp; &nbsp; : &nbsp; Nov 2021</p>
+                <p><strong> Tools used</strong> &nbsp; : &nbsp; Excel, VBA</p>
+                <p><strong> Category</strong> &nbsp;: &nbsp; Macros, Automation</p>
               </div>
 
             </div>
@@ -223,7 +222,6 @@
                 <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
                 <p><strong> Tools used</strong> &nbsp; : &nbsp; Python, Sklearn, Matplotlib, Neural Networks, Keras, Google Colab</p>
                 <p><strong> Category</strong> &nbsp;: &nbsp; Data Science, Machine Learning, Deep Learning, Optimization</p>
-                <p><strong> Year</strong> &nbsp; &nbsp; : &nbsp; Nov 2021</p>
               </div>
 
             </div>
@@ -252,7 +250,6 @@
                 <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
                 <p><strong> Tools used</strong> &nbsp; : &nbsp; Python, Sklearn, Matplotlib, Neural Networks, Keras, Google Colab</p>
                 <p><strong> Category</strong> &nbsp;: &nbsp; Data Science, Machine Learning, Deep Learning, Optimization</p>
-                <p><strong> Year</strong> &nbsp; &nbsp; : &nbsp; Nov 2021</p>
               </div>
 
             </div>
