--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           <figcaption>JavaScript</figcaption>
         </figure>
         <figure data-aos="slide-right">
-          <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="125px" height="125px" viewBox="0 0 50 50" style=" fill:#000000;"><path fill-rule="evenodd" d="M 42 6 L 39 40 L 25 44 L 11 40 L 8 6 Z M 16.800781 28 L 20.800781 28 L 20.898438 30.5 L 25 31.898438 L 29.101563 30.5 L 29.398438 26 L 20.601563 26 L 20.398438 22 L 29.601563 22 L 29.898438 18 L 16.101563 18 L 15.800781 14 L 34.101563 14 L 33.601563 22 L 32.898438 33.5 L 25 36.101563 L 17.101563 33.5 Z"></path></svg>
+          <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100px" height="100px" viewBox="0 0 50 50" style=" fill:#000000;"><path fill-rule="evenodd" d="M 42 6 L 39 40 L 25 44 L 11 40 L 8 6 Z M 16.800781 28 L 20.800781 28 L 20.898438 30.5 L 25 31.898438 L 29.101563 30.5 L 29.398438 26 L 20.601563 26 L 20.398438 22 L 29.601563 22 L 29.898438 18 L 16.101563 18 L 15.800781 14 L 34.101563 14 L 33.601563 22 L 32.898438 33.5 L 25 36.101563 L 17.101563 33.5 Z"></path></svg>
           <figcaption>CSS</figcaption>
         </figure>
         <figure data-aos="slide-right">
@@ -215,13 +215,13 @@
             <div class="card-body">
 
               <div class="h5">
-                <a href="https://github.com/kevogil" style="font-weight: 600">Send emails with customized parameters and attachments</a>
+                <h4 style="font-weight: 600">Send emails with customized parameters and attachments</h4>
               </div>
 
               <div class="card-text">
                 <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
-                <p><strong> Tools used</strong> &nbsp; : &nbsp; Python, Sklearn, Matplotlib, Neural Networks, Keras, Google Colab</p>
-                <p><strong> Category</strong> &nbsp;: &nbsp; Data Science, Machine Learning, Deep Learning, Optimization</p>
+                <p><strong> Tools used</strong> &nbsp; : &nbsp; Excel, Outlook, VBA</p>
+                <p><strong> Category</strong> &nbsp;: &nbsp; Macros, Automation</p>
               </div>
 
             </div>
@@ -243,13 +243,13 @@
             <div class="card-body">
 
               <div class="h5">
-                <a href="https://github.com/kevogil" style="font-weight: 600">Export Excel to Access and Power Query back to Excel</a>
+                <h4 style="font-weight: 600">Export Excel to Access and Power Query back to Excel</h4>
               </div>
 
               <div class="card-text">
                 <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
-                <p><strong> Tools used</strong> &nbsp; : &nbsp; Python, Sklearn, Matplotlib, Neural Networks, Keras, Google Colab</p>
-                <p><strong> Category</strong> &nbsp;: &nbsp; Data Science, Machine Learning, Deep Learning, Optimization</p>
+                <p><strong> Tools used</strong> &nbsp; : &nbsp; Excel, Access, VBA, PowerQuery M</p>
+                <p><strong> Category</strong> &nbsp;: &nbsp; Macros, Automation, Databases</p>
               </div>
 
             </div>
