--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
               <div class="card-text">
                 <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
                 <p><strong> Tools used</strong> &nbsp; : &nbsp; Excel, Access, VBA, PowerQuery M</p>
-                <p><strong> Category</strong> &nbsp;: &nbsp; Macros, Automation, Databases</p>
+                <p><strong> Category</strong> &nbsp;: &nbsp; Macros, Automation, Database</p>
               </div>
 
             </div>
