--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
           </div>
           <div class="col-md-9 aos-init aos-animate" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
             <div class="card-body">
-              <div class="h5">Data Science and Analytics Boot Camp</div>
+              <div class="h5">Data Analytics Boot Camp</div>
               <h6 style="color: darkgrey;">USC Viterbi School of Engineering | Los Angeles, CA</h6>
-              <p> 24-week intensive program focused on technical programming skills in Python, R, JavaScript, Web Scraping, API Interactions, SQL/NoSQL Databases, ETL, Tableau, Front End Web Visualization, Fundamental Statistics,
-                  Big Data, Machine Learning and Deep Learning.
+              <p> 26-week rigorous program focused on technical skills to solve data problems through Excel, Python, R, JavaScript, SQL Databases, Tableau, as well as data visualization through HTML and CSS.
+                  Beyond technical skills, the course went further into concepts of Big Data as well as machine learning with neural networks.
               </p>
             </div>
           </div>
