--- a/index.html
+++ b/index.html
@@ -248,13 +248,13 @@
             <div class="card-body">
 
               <div class="h5">
-                <a href="https://github.com/kevogil" style="font-weight: 600">Export Excel to Access and Power Query back to Excel</a>
+                <h4 style="font-weight: 600">Export Excel to Access and Power Query back to Excel</h4>
               </div>
 
               <div class="card-text">
                 <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
                 <p><strong> Tools used</strong> &nbsp; : &nbsp; Excel, Access, VBA, PowerQuery M</p>
-                <p><strong> Category</strong> &nbsp;: &nbsp; Macros, Automation, Database</p>
+                <p><strong> Category</strong> &nbsp;: &nbsp; Macros, Automation, Database, Macros, Automation, Database, Macros, Automation, Database, Macros, Automation, Database, Macros, Automation, Database</p>
                 <p><strong> Year</strong> &nbsp; &nbsp; : &nbsp; Nov 2021</p>
               </div>
 
