--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <!-- Project 1 -->
       <div class="card">
         <div class="row">
-          <div class="col-md-7 bg-primary aos-init aos-animate" data-aos="zoom-out-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/forecast_model.gif&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
+          <div class="col-md-7 bg-primary aos-init aos-animate" data-aos="zoom-out-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/forecast_model.gif&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: visible">
             <div class="card-body"></div>
           </div>
 
@@ -210,7 +210,7 @@
       <!-- Project 2 -->
       <div class="card">
         <div class="row">
-          <div class="col-md-7 bg-primary aos-init aos-animate" data-aos="zoom-out-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/email_model.gif&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
+          <div class="col-md-7 bg-primary aos-init aos-animate" data-aos="zoom-out-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/email_model.gif&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: visible">
             <div class="card-body"></div>
           </div>
 
