--- a/index.html
+++ b/index.html
@@ -188,13 +188,16 @@
             <div class="card-body">
 
               <div class="h5">
-                <h4 style="font-weight: 600">Consolidate multiple files dynamically</h4>
+                <h4 style="font-weight: 600">Consolidate multiple files into one</h4>
               </div>
 
               <div class="card-text">
-                <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
+                <p> 
+                  Dynamically import all division-level financial reports found in a specified folder into one master file.
+                  The individual files are imported into their respective worksheets.
+                  All imported sheets are then rolled-up into a company-level view, consolidating all divisions into one single tab.
+                </p><br>
                 <p><strong> Tools used</strong> &nbsp; : &nbsp; Excel, VBA</p>
-                <p><strong> Category</strong> &nbsp;: &nbsp; Macros, Automation</p>
               </div>
 
             </div>
@@ -216,13 +219,16 @@
             <div class="card-body">
 
               <div class="h5">
-                <h4 style="font-weight: 600">Send emails with customized parameters and attachments</h4>
+                <h4 style="font-weight: 600">Send Outlook emails from Excel with parameters and attachments</h4>
               </div>
 
               <div class="card-text">
-                <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
+                <p>
+                  We often have recurring emails that we send out on a daily or weekly basis. Make your life easier by sending them straight through Excel.
+                  Customize your email parameters, including your target email address, subject, body, signature, and attachments as needed.
+                  Insert as many rows as needed, and run the program to send out all your emails via Outlook.
+                </p><br>
                 <p><strong> Tools used</strong> &nbsp; : &nbsp; Excel, Outlook, VBA</p>
-                <p><strong> Category</strong> &nbsp;: &nbsp; Macros, Automation</p>
               </div>
 
             </div>
@@ -244,13 +250,15 @@
             <div class="card-body">
 
               <div class="h5">
-                <h4 style="font-weight: 600">Export Excel to Access and Power Query back to Excel</h4>
+                <h4 style="font-weight: 600">Export data to Access or vice versa</h4>
               </div>
 
               <div class="card-text">
-                <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
+                <p> 
+                  Did you know that Excel has a limit of 1,048,576 rows? Seamlessly export your Excel data to an Access database, a much safer and reliable way of storing large amounts of valuable data.
+                  Need to access your data stored in Access? Just as easily Power Query your data back to Excel without dealing with sluggish Excel files since this data is stored as a connection, not within the Excel file itself.
+                </p><br>
                 <p><strong> Tools used</strong> &nbsp; : &nbsp; Excel, Access, VBA, PowerQuery M</p>
-                <p><strong> Category</strong> &nbsp;: &nbsp; Macros, Automation, Database, Macros, Automation, Database, Macros, Automation, Database, Macros, Automation, Database, Macros, Automation, Database</p>
               </div>
 
             </div>
