--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
   <div class="about-me" id="about-me">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
     <h2>ABOUT ME</h2>
-    <p class="subtitle">I am a Financial Analyst with five years of experience helping organizations solve problems and put their data to use. I enjoy mining and modeling data for insights with VBA, PowerQuery M, and Python.</p>
+    <p class="subtitle">I am a Financial Analyst with six years of experience helping organizations solve problems and put their data to use. I enjoy mining and modeling data for insights with VBA, PowerQuery M, and Python.</p>
     <p class="subtitle">I have extensive experience in building financial models and automating processes for organizations across media, retail, and licensing industries. Driven and always curious, I love learning and tinkering around with new libraries and toolsets.</p>
-  </div>
+  </div><br><br><hr><br>
   <!-- End About Me -->
 
 
