--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 
   <!-- About Me -->
-  <div class="about-me" id="about-me">
+  <div class="about-me me-yellow-bg" id="about-me">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
     <h2>ABOUT ME</h2>
     <p class="subtitle">I am a Financial Analyst with six years of experience helping organizations solve problems and put their data to use. I enjoy mining and modeling data for insights with VBA, PowerQuery M, and Python.</p>
